<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_withdraw"
    android:background="@color/colorAccent"
    tools:context="com.inti.ricoh.julfi.idap.Student.WithdrawActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/progress"
                android:visibility="invisible"
                android:layout_width="@dimen/circular"
                android:layout_height="@dimen/circular"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                app:mpb_progressStyle="circular"
                app:mpb_indeterminateTint="@color/colorPrimaryDark"
                app:mpb_progressTint = "@color/colorPrimaryDark"
                style="@style/Widget.MaterialProgressBar.ProgressBar" />
            <View
                android:id="@+id/viewTop"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorAccent"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_below="@+id/viewTop"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wtool"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="@dimen/otooltitle"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>


            </android.support.v7.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/layout_hide"
                android:padding="@dimen/tendp"
                android:layout_below="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:textSize="@dimen/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wstitle"
                        android:textColor="@color/black"
                        android:id="@+id/tv_particular"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_particular"
                        android:layout_marginTop="@dimen/tendp"
                        android:text="@string/wfname"
                        android:textSize="@dimen/normal"
                        android:id="@+id/tv_fname"
                        android:labelFor="@+id/et_fullname"/>
                    <android.support.v7.widget.AppCompatEditText
                        android:focusable="false"
                        android:cursorVisible="false"
                        app:backgroundTint="@android:color/holo_red_light"
                        android:maxLines="1"
                        android:layout_width="@dimen/et"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_fname"
                        android:id="@+id/et_fullname"
                        android:inputType="text"
                        android:layout_alignParentStart="true"
                        android:hint="@string/whint"
                        android:textColorHint="@color/grey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tendp"
                        android:text="@string/wmatri"
                        android:textSize="@dimen/normal"
                        android:layout_below="@+id/et_fullname"
                        android:labelFor="@+id/et_matri"
                        android:id="@+id/tv_matri"/>
                    <android.support.v7.widget.AppCompatEditText
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:maxLines="1"
                        app:backgroundTint="@android:color/holo_red_light"
                        android:layout_width="@dimen/et"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_matri"
                        android:layout_below="@+id/tv_matri"
                        android:layout_alignParentStart="true"
                        android:inputType="text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tendp"
                        android:layout_below="@id/et_matri"
                        android:text="@string/wbname"
                        android:textSize="@dimen/normal"
                        android:labelFor="@+id/et_bank"
                        android:id="@+id/tv_bank"/>
                    <android.support.v7.widget.AppCompatEditText
                        android:maxLines="1"
                        android:layout_width="@dimen/et"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_bank"
                        android:inputType="text"
                        app:backgroundTint="@android:color/holo_red_light"
                        android:layout_below="@+id/tv_bank"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_bank"
                        android:layout_marginTop="@dimen/tendp"
                        android:text="@string/wbaccount"
                        android:textSize="@dimen/normal"
                        android:id="@+id/tv_bacc"
                        android:labelFor="@+id/et_bacc"/>
                    <android.support.v7.widget.AppCompatEditText
                        android:maxLines="1"
                        android:layout_width="@dimen/et"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_bacc"
                        android:inputType="text"
                        app:backgroundTint="@android:color/holo_red_light"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_bacc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_bholder"
                        android:layout_marginTop="@dimen/tendp"
                        android:layout_below="@+id/et_bacc"
                        android:text="@string/wbholder"
                        android:textSize="@dimen/normal"
                        android:labelFor="@+id/et_bholder"/>
                    <android.support.v7.widget.AppCompatEditText
                        android:maxLines="1"
                        android:layout_width="@dimen/et"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_bholder"
                        android:inputType="text"
                        app:backgroundTint="@android:color/holo_red_light"
                        android:layout_below="@+id/tv_bholder"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_bholder"
                        android:text="@string/date"
                        android:textSize="@dimen/normal"
                        android:id="@+id/tv_date"
                        android:layout_marginTop="@dimen/tendp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text"
                        android:text="@string/important"
                        android:layout_below="@+id/tv_date"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/tendp"
                        android:textColor="@color/alert"
                        android:textStyle="bold"
                        android:id="@+id/tv_important"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_note"
                        android:layout_marginTop="@dimen/tendp"
                        android:layout_alignParentStart="true"
                        android:text="@string/wnote"
                        android:layout_below="@+id/tv_important"
                        android:textColor="@color/alert"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/alert"
                        android:layout_below="@+id/tv_note"
                        android:layout_centerHorizontal="true"
                        android:text="@string/agree"
                        android:id="@+id/cb_agree"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_marginTop="@dimen/twdp"
                        android:layout_marginBottom="@dimen/twdp"
                        android:id="@+id/btn_submit"
                        android:layout_width="@dimen/tv"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:layout_centerHorizontal="true"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text"
                        android:textStyle="bold"
                        android:layout_below="@+id/cb_agree"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
